tests/basic/assert/assert_false_00.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

-- NOTE: "vâ‰ unit" reduces to "false"
f41 : {v:unit|vâ‰ unit}
f41 = assert false

f51 : {v:unit|false}
f51 = assert false
